Fixed margins on mobile issue
Margins should be 12px.

--- a/_sass/components/_components.tabs.scss
+++ b/_sass/components/_components.tabs.scss
@@ -10,7 +10,7 @@ $tab-width-mobile: 133px;
   overflow-x: scroll;
   -webkit-overflow-scrolling: touch;
   @include mq($until: tablet) {
-    left: 0;
+    left: 12px;
     width: 100vw;
   }
 }
@@ -62,4 +62,8 @@ $tab-width-mobile: 133px;
 .c-tab__item--long.c-tab__item--active {
   min-width: 180px;
   max-width: 180px;
+  @include mq($until: tablet) {
+    min-width: 150px;
+    max-width: 150px;
+  }
 }
