--- a/_sass/objects/_objects.wrapper.scss
+++ b/_sass/objects/_objects.wrapper.scss
@@ -21,6 +21,10 @@ $inuit-wrapper-width: 1088px !default;
   margin-right: auto;
   margin-left:  auto;
   max-width: $inuit-wrapper-width;
+  @include mq($until: mobile) {
+    padding-right: $inuit-global-spacing-unit/2;
+    padding-left:  $inuit-global-spacing-unit/2;
+  }
 }
 
 .o-wrapper__full-width {
